<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtwelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Welcome"
        android:paddingTop="50dp"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LogoutBtn"
        android:layout_marginBottom="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/signature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignatureBtn"
        android:layout_below="@+id/txtwelcome"
        android:layout_centerHorizontal="true" />


    <Button
        android:id="@+id/postsignature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PostSignature"
        android:layout_below="@+id/signature"
        android:layout_centerHorizontal="true" />

</RelativeLayout>